# Video_Wall

./: CMakeLists.txt  LICENSE  README.md
Video_Wall/: CMakeLists.txt  application.cpp  application.h  globaldefine.h  headfiledefine.h  main.cpp  mainwindow.cpp  mainwindow.h  runtimedata.cpp  runtimedata.h  video_wall.qrc  videopreviewarea.cpp  videopreviewarea.h
Video_Wall/BottomArea/: audiosettingwindow.cpp  audiosettingwindow.h  mediasettingwindow.cpp  mediasettingwindow.h  playcontrolwindow.cpp  playcontrolwindow.h  playerlistwindow.cpp  playerlistwindow.h  volumecontrolwindow.cpp  volumecontrolwindow.h
Video_Wall/ComputerInfo/: computerinfo.cpp  computerinfo.h  cpuinfo.cpp  cpuinfo.h  memoryinfo.cpp  memoryinfo.h  systemtimeinfo.cpp  systemtimeinfo.h
Video_Wall/Controls/: buttonex.cpp  buttonex.h  comboboxex.cpp  comboboxex.h  flatuiex.cpp  flatuiex.h  iconhelper.cpp  iconhelper.h  ipaddressedit.cpp  ipaddressedit.h  ipaddresslineedit.cpp  ipaddresslineedit.h  labelex.cpp  labelex.h  localstreamlistex.cpp  localstreamlistex.h  localstreamlistitemex.h  localstreamlistviewchild.cpp  localstreamlistviewchild.h  localstreamlistviewgroup.cpp  localstreamlistviewgroup.h  mediaselectlistex.cpp  mediaselectlistex.h  mediaselectlistitemex.h  mediaselectlistviewchild.cpp  mediaselectlistviewchild.h  navigationbar.cpp  navigationbar.h  navlabelex.cpp  navlabelex.h  playlistex.cpp  playlistex.h  playlistitemex.h  playlistpageex.cpp  playlistpageex.h  playlistsectionex.cpp  playlistsectionex.h  playlistviewchild.cpp  playlistviewchild.h  playlistwidgetex.cpp  (+21 more)
Video_Wall/Controls/Ribbon/: ribbon.cpp  ribbon.h  ribbonbutton.cpp  ribbonbutton.h  ribbonpage.cpp  ribbonpage.h  ribbonsection.cpp  ribbonsection.h
Video_Wall/EditorWindow/: ipstreameditorwindow.cpp  ipstreameditorwindow.h  localstreameditorwindow.cpp  localstreameditorwindow.h  pictureeditorwindow.cpp  pictureeditorwindow.h  playlisteditorwindow.cpp  playlisteditorwindow.h  videosourceeditrowindow.cpp  videosourceeditrowindow.h
Video_Wall/GraphicsView/: graphicssceneex.cpp  graphicssceneex.h  graphicsviewex.cpp  graphicsviewex.h  graphicswidget.cpp  graphicswidget.h  graphicswindow.cpp  graphicswindow.h
Video_Wall/Public/: addipstreamwindow.cpp  addipstreamwindow.h  addplaylistwindow.cpp  addplaylistwindow.h  localmediastreamwindow.cpp  localmediastreamwindow.h  selectmediasourcewindow.cpp  selectmediasourcewindow.h
Video_Wall/SplitterArea/: channelareautilwindow.cpp  channelareautilwindow.h  monitorareautilwindow.cpp  monitorareautilwindow.h  videoareautilwindow.cpp  videoareautilwindow.h  virtualareautilwindow.cpp  virtualareautilwindow.h
Video_Wall/VideoChannel/: channelwindow.cpp  channelwindow.h  mainmonitorwindow.cpp  mainmonitorwindow.h  pgmwindow.cpp  pgmwindow.h  previewmonitorwindow.cpp  previewmonitorwindow.h  previewwindow.cpp  previewwindow.h  pvwwindow.cpp  pvwwindow.h
Video_Wall/res/: style_default.qss
